--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "new-year-birthday-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://misterkot03.github.io/HP/",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -49,6 +50,7 @@
     ]
   },
   "devDependencies": {
-    "ajv": "^7.2.4"
+    "ajv": "^7.2.4",
+    "gh-pages": "^6.2.0"
   }
 }
