--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "new-year-birthday-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://misterkot03.github.io/HP/",
+  "homepage": "",
   "dependencies": {
     "@lottiefiles/react-lottie-player": "^3.5.4",
     "@testing-library/jest-dom": "^5.17.0",
